# wigglypuff

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  client.py
.circleci/: config.yml
docker/alpine/: Dockerfile
docker/slim-buster/: Dockerfile
example/client-js/: index.html  start.sh  webrtc.js
src/: constants.rs  main.rs
src/api/: fcm_controller.rs  firebase_cloud_message_controller.rs  mod.rs  nat_controller.rs  network_transversal_controller.rs  room_controller.rs  static_web_controller.rs
src/config/: app.rs  gstreamer.rs  https.rs  input_arguments.rs  mod.rs  webrtc.rs
src/models/: error.rs  firebase_cloud_message.rs  message.rs  message_websocket.rs  mod.rs  network_transversal.rs  response.rs  room.rs  session.rs  supervisor.rs  webrtc.rs  webrtc_signals.rs
src/service/: message_websocket.rs  mod.rs  room.rs  session.rs  webrtc.rs  webrtc_receive.rs  webrtc_supervisor.rs
src/service/webrtc/: channel.rs  leader.rs  mod.rs  pipeline.rs  receiver.rs  sender.rs  supervisor.rs  user.rs  webrtc.rs
static/: index.html  webrtc.js
