[package]
name = "wigglypuff"
version = "0.1.0"
authors = ["cQuran"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
actix_derive = "0.5.0"

futures = "0.3"
env_logger = "0.7"
log = "0.4.8"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
derive_more = "0.99.7"